# ChangeLog for app-cdr/serpentine
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/serpentine/ChangeLog,v 1.8 2006/05/14 23:42:55 metalgod Exp $

*serpentine-0.6.91 (14 May 2006)

  14 May 2006; Luis Medinas <metalgod@gentoo.org> +serpentine-0.6.91.ebuild:
  Version Bump.

  27 Feb 2006; Zaheer Abbas Merali <zaheerm@gentoo.org>
  serpentine-0.6.3.ebuild, serpentine-0.6.4.ebuild:
  fix deps

  07 Nov 2005; Luis Medinas <metalgod@gentoo.org> serpentine-0.6.4.ebuild:
  Add another missing dependency. See bug #111678.

*serpentine-0.6.4 (31 Oct 2005)

  31 Oct 2005; Luis Medinas <metalgod@gentoo.org> +serpentine-0.6.4.ebuild:
  Version Bump.

  01 Oct 2005; Luis Medinas <metalgod@gentoo.org> -serpentine-0.6.2.ebuild,
  serpentine-0.6.3.ebuild:
  Removed older version. Fixed dependencies.

  19 Sep 2005; Luis Medinas <metalgod@gentoo.org> serpentine-0.6.3.ebuild:
  Fixed dependency. Bug #106415.

*serpentine-0.6.3 (17 Sep 2005)

  17 Sep 2005; Luis Medinas <metalgod@gentoo.org> +serpentine-0.6.3.ebuild:
  Version Bump

*serpentine-0.6.2 (16 Sep 2005)

  16 Sep 2005; Luis Medinas <metalgod@gentoo.org> +serpentine-0.6.2.ebuild:
  New package. Thanks to all people involved in bug #90837.
