@@ -1,26 +1,31 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST serpentine-0.6.3.tar.gz 205994 size 205994
-DIST serpentine-0.6.4.tar.bz2 191148 size 191148
-DIST serpentine-0.6.91.tar.bz2 209402 RMD160 8c6dc157e3633e81279773fb50dd7ce12e2bd095 SHA256 03d08cf87a05ab33435b68afce73b77e79b80cc72692f9fd559f4b558173656c size 209402
-EBUILD serpentine-0.6.3.ebuild 924 RMD160 1493c752ea098686183c55ae9ad77790afa7f61a SHA1 5434266c39730608ceba2be2b2866917eedc5916 SHA256 800b16309d5d787fce902d8aa177acd21587a91e3d169d9e8d044154940d42bb size 924
+DIST serpentine-0.6.3.tar.gz 205994
+DIST serpentine-0.6.4.tar.bz2 191148
+DIST serpentine-0.6.91.tar.bz2 209402 RMD160 8c6dc157e3633e81279773fb50dd7ce12e2bd095 SHA1 7b6fc5445556e6669ce6dc1bab435750a7a590d1 SHA256 03d08cf87a05ab33435b68afce73b77e79b80cc72692f9fd559f4b558173656c
+DIST serpentine-0.7.tar.bz2 213815 RMD160 f1b36c462f515056dc18d4ceeeafdb7030799d2f SHA1 1e23fab9a0d8da4c0dadbec8568b5f6d55eca88d SHA256 7e532e76faad2fde8ee785beff8a05aa24b373125e74cecba2e88fe011ec9fd5
+EBUILD serpentine-0.6.3.ebuild 924 RMD160 1493c752ea098686183c55ae9ad77790afa7f61a SHA1 5434266c39730608ceba2be2b2866917eedc5916 SHA256 800b16309d5d787fce902d8aa177acd21587a91e3d169d9e8d044154940d42bb
 MD5 0874e5832f62821ac179e300d7df5db1 serpentine-0.6.3.ebuild 924
 RMD160 1493c752ea098686183c55ae9ad77790afa7f61a serpentine-0.6.3.ebuild 924
 SHA256 800b16309d5d787fce902d8aa177acd21587a91e3d169d9e8d044154940d42bb serpentine-0.6.3.ebuild 924
-EBUILD serpentine-0.6.4.ebuild 1064 RMD160 f65a6c8153bd7665915c21f17100eff0a2762968 SHA1 8a4c9440b6d406c19f3cd5be1892eca8508a8325 SHA256 033d9452d6f794f7516e762609eaef338b19e3200fe3b41fe8929c225fb7373d size 1064
+EBUILD serpentine-0.6.4.ebuild 1064 RMD160 f65a6c8153bd7665915c21f17100eff0a2762968 SHA1 8a4c9440b6d406c19f3cd5be1892eca8508a8325 SHA256 033d9452d6f794f7516e762609eaef338b19e3200fe3b41fe8929c225fb7373d
 MD5 587f3de615bbcda6ebf55c0c13f2a295 serpentine-0.6.4.ebuild 1064
 RMD160 f65a6c8153bd7665915c21f17100eff0a2762968 serpentine-0.6.4.ebuild 1064
 SHA256 033d9452d6f794f7516e762609eaef338b19e3200fe3b41fe8929c225fb7373d serpentine-0.6.4.ebuild 1064
-EBUILD serpentine-0.6.91.ebuild 1014 RMD160 024b2517fec0c28e53dd2df17a8322a4696de8f5 SHA1 32cf61d3552e6c1d7455c7100085a41d810b3683 SHA256 9ace4f2ab9e538c55aa436eae90e9ad07e136da5847de88daca6824618690cac size 1014
+EBUILD serpentine-0.6.91.ebuild 1014 RMD160 024b2517fec0c28e53dd2df17a8322a4696de8f5 SHA1 32cf61d3552e6c1d7455c7100085a41d810b3683 SHA256 9ace4f2ab9e538c55aa436eae90e9ad07e136da5847de88daca6824618690cac
 MD5 167c3c33ea5bba275b8ecfde15831731 serpentine-0.6.91.ebuild 1014
 RMD160 024b2517fec0c28e53dd2df17a8322a4696de8f5 serpentine-0.6.91.ebuild 1014
 SHA256 9ace4f2ab9e538c55aa436eae90e9ad07e136da5847de88daca6824618690cac serpentine-0.6.91.ebuild 1014
-MISC ChangeLog 1265 RMD160 7ff61a3b79c6ddcf038dab67fe0d2e656c51ef7f SHA1 350f1c702c4d5b55a493b771b874a7c0f0928e6d SHA256 09a02bc90a030d03b2b2014e02cc89dd5105864bafdfca9fae0e67bc0e505291 size 1265
-MD5 da2b432bfaeb2c9f6a4f748b607e6e4b ChangeLog 1265
-RMD160 7ff61a3b79c6ddcf038dab67fe0d2e656c51ef7f ChangeLog 1265
-SHA256 09a02bc90a030d03b2b2014e02cc89dd5105864bafdfca9fae0e67bc0e505291 ChangeLog 1265
-MISC metadata.xml 410 RMD160 5a28e2a4d347912e087188b67373857ac1a7d197 SHA1 f13167154fb8e8090d38aa78cd0d4178026db097 SHA256 eda598b086e23b8a9f3f278dd75b3e07911b51034215af54e2f19131ef3e9820 size 410
+EBUILD serpentine-0.7.ebuild 1011 RMD160 7b98400e4f02cf5e538f42008028d000dac5a2c1 SHA1 78dae0c9dc75d2339bc8e22d7f3822f1c4a3d98c SHA256 818ac3741b45a221990a7132d6a1b3089d8f8a2c0bb5ec9ce4f3b6518234004d
+MD5 a9218f40ddd9de6f76f5118fd0b8f341 serpentine-0.7.ebuild 1011
+RMD160 7b98400e4f02cf5e538f42008028d000dac5a2c1 serpentine-0.7.ebuild 1011
+SHA256 818ac3741b45a221990a7132d6a1b3089d8f8a2c0bb5ec9ce4f3b6518234004d serpentine-0.7.ebuild 1011
+MISC ChangeLog 1401 RMD160 b053c40acb5bf12ef21c113f6a33a7df5d194ca2 SHA1 19bbfc1ad1cf86b4506c2e3583a4f9772bb6f809 SHA256 37918a47f51933aa71e5fb857d417107ab452f0afc1a9c77f19c0fef92203211
+MD5 cad0dbb56563536ae17053f3ae59c1a1 ChangeLog 1401
+RMD160 b053c40acb5bf12ef21c113f6a33a7df5d194ca2 ChangeLog 1401
+SHA256 37918a47f51933aa71e5fb857d417107ab452f0afc1a9c77f19c0fef92203211 ChangeLog 1401
+MISC metadata.xml 410 RMD160 5a28e2a4d347912e087188b67373857ac1a7d197 SHA1 f13167154fb8e8090d38aa78cd0d4178026db097 SHA256 eda598b086e23b8a9f3f278dd75b3e07911b51034215af54e2f19131ef3e9820
 MD5 cd5c37cb439c1d6f79fdf285f53b3662 metadata.xml 410
 RMD160 5a28e2a4d347912e087188b67373857ac1a7d197 metadata.xml 410
 SHA256 eda598b086e23b8a9f3f278dd75b3e07911b51034215af54e2f19131ef3e9820 metadata.xml 410
@@ -33,10 +38,13 @@ SHA256 3d5aed60bd44ad30066fae5dfce2753d0fae829b8b7bdf1637220a965ae28b9f files/di
 MD5 338493c878170241af301e8220c3a8f3 files/digest-serpentine-0.6.91 256
 RMD160 0d985bac9d00a4491ff33e634bb3e763b64f6158 files/digest-serpentine-0.6.91 256
 SHA256 3819cf3096db68fd1e32ac45a5ba0575e7e1c14364ef7fdcfbffcea212080912 files/digest-serpentine-0.6.91 256
+MD5 ed987cdd8e39f0e72a332cf6c793034e files/digest-serpentine-0.7 247
+RMD160 3d3c10bf3e1f577333ef13bb55e5f221dcba825c files/digest-serpentine-0.7 247
+SHA256 2b2c647e2d5411eda35c7f88d54488e2ddedc736b3380bdeeda4fdbb7c74c197 files/digest-serpentine-0.7 247
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.3 (GNU/Linux)
 
-iD8DBQFEZ8ALwUpWvClEHQoRAnRtAJ4n2tZiZLUul7a5heV5loXFQce4IQCghGYj
-g+8ueGO0WAIhzpCGqf9Di7Q=
-=Z8vm
+iD8DBQFEjg1mwUpWvClEHQoRAkIJAJ9GJ17Rd8+lB0Os6xX25SmuCTsuQACdEfKo
+RIvaBU56sonUY6UiUJXiKtM=
+=zYHk
 -----END PGP SIGNATURE-----
