@@ -1,0 +1,3 @@
+MD5 6e841e6c11796841656dba2678a558f0 serpentine-0.7.tar.bz2 213815
+RMD160 f1b36c462f515056dc18d4ceeeafdb7030799d2f serpentine-0.7.tar.bz2 213815
+SHA256 7e532e76faad2fde8ee785beff8a05aa24b373125e74cecba2e88fe011ec9fd5 serpentine-0.7.tar.bz2 213815
